feat: Add user onboarding flow, allow changing playlist cover
