# docs/swagger.json
@@ -339,6 +339,37 @@
                 }
             }
         },
+        "/auth/onboarded": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Mark user as onboarded",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "boolean"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "consumes": [
@@ -1828,6 +1859,9 @@
                 "name"
             ],
             "properties": {
+                "cover_song_id": {
+                    "type": "integer"
+                },
                 "description": {
                     "type": "string"
                 },
